fix: Dashboard schema error and enable volume mounting
- Fix: Updated dashboard.py to use 'created_at' instead of 'occurred_at' for story_events
- Config: Enabled volume mounting in docker-compose.yml for development
- Docs: Updated walkthrough with screenshot and troubleshooting notes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,8 +71,8 @@ services:
     ports:
       - "8000:8000"  # API server
     volumes:
-      # Optional:  Mount local code for development
-      # - ./:/app
+      # Mount local code for development
+      - ./:/app
       - story_data:/app/data
     networks:
       - newstown-network
