--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,7 @@ sendgrid==6.11.0
 jinja2==3.1.2
 duckduckgo-search==6.3.5
 markdown==3.5.2
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
+python-multipart==0.0.9
